# f3-baremetal

./: .clangd  .gitignore  CMakeLists.txt  F3Baremetal.cmake.in  F3BaremetalConfig.cmake.in  flake.nix  run
.github/workflows/: cachix.yml
CANMonitor/: CANMonitor.ld  CMakeLists.txt  can.hpp  can_debug.hpp  can_debug_seq.hpp  console.hpp  event_log.hpp  main.cpp  rcc.hpp  tick_timer.hpp  utils.hpp
docs/: c_isr.md  clock.md  interrupt_vector.md
f3-baremetal/: CMakeLists.txt
f3-baremetal/include/f3/: console.hpp  handler.hpp  ram_vector.hpp
f3-baremetal/include/f3/peripherals/: basic_timer.hpp  can.hpp  crc16.hpp  spi.hpp
f3-baremetal/source/: exception_handler.hpp  ram_vector.cpp  stack_clear.hpp  startup.cpp
include/f3/: console.hpp  eventlog.hpp  startup.hpp
include/f3/peripherals/: adc.hpp  basic_timer.hpp  can.hpp  dma.hpp  dma_channel.hpp  gpio.hpp  pwm.hpp  rcc.hpp  spi.hpp  usart.hpp
polyfill-srobo1-random/: CMakeLists.txt
polyfill-srobo1-random/source/: random.cpp
polyfills/: CMakeLists.txt
polyfills/srobo1-random/: CMakeLists.txt
polyfills/srobo1-random/include/robotics/random/: random.hpp
source/startup/: stack_clear.hpp  startup.cpp
startup/: startup_stm32f303x8.s
stub-bootloader/: CMakeLists.txt  bootloader.ld
stub-bootloader-api/: CMakeLists.txt
stub-bootloader-api/include/: bl.hpp
stub-bootloader/source/: main.cpp
